--- a/public/css/index.css
+++ b/public/css/index.css
@@ -86,7 +86,7 @@ body{
   }
 .part-two img{
   width: 100%;
-  height: 162px;
+  height: 200px;
   }
 .card-body{
   display: flex;
@@ -145,6 +145,14 @@ border: 2px solid;
 margin: auto;
 }
 
+img.ranking{
+  width: 47px;
+  height: 50px;
+  position: relative;
+  left: 1%;
+  top: -1pc;
+}
+
 .section-products article{
   padding-bottom: 5%;
 }
@@ -191,6 +199,13 @@ section article img.carrito{
   text-align: center;
   font-size: 15px;
   font-style: italic;
+}
+.section-products a{
+  display: flex;
+  color: rgb(104, 125, 222);
+  font-size: 17px;
+  font-weight: bold;
+  justify-content: center;
 }
 .tell-me-more{
   margin: auto;
@@ -287,6 +302,34 @@ height: auto;
 display: none;
 }
 }
+/* Regalos Css */
+  .gifts{
+    margin: 0!important;
+    padding: 0!important;
+    background-image:url('../img/banner.jpg');
+    background-repeat: no-repeat;
+    height: 300px;
+  }
+  .section-products.allgifts{
+    padding-bottom: 8%;
+  }
+
+  form.gift-search{
+    position: relative;
+    right: -77%;
+    bottom: -20%;
+  }
+  section .products{
+    color: rgb(166, 56, 171);
+    font-weight: bold;
+  }
+  img.allgifts{
+    width: 57px;
+    height: 54px;
+    position: relative;
+    left: 1%;
+    top: -1pc;
+  }
 
 /* formularios css */
 
@@ -301,8 +344,17 @@ display: none;
   padding-bottom: 7%;
   padding-top: 4%;
 }
+
+img.lista{
+  width: 42px;
+  height: 37px;
+  position: relative;
+  left: 5%;
+}
 .addgift h1{
   font-family: 'Lobster', sans-serif;
+  display: inline-flex;
+  text-align: center;
 }
 .addgift form{
   width: 50%;
@@ -326,6 +378,7 @@ display: none;
 }
 .addgift input[type="submit"] {
   background-color: rgb(104, 125, 222);
+  justify-content: center;
   border-radius: 5px;
   padding: 5px;
   font-size: 20px;
@@ -336,7 +389,6 @@ display: none;
   left: 28%;
   top: 20px;
 }
-
 
 .addgift select{
   display: flex;
@@ -357,23 +409,20 @@ display: none;
 .fondo-add-gift{
   background-image:url('../img/ingreso.jpg');
   width: 50%;
-  height: 114%;
+  height: 123%;
   position: absolute;
   top: 10px;
   overflow: hidden;
   background-size: cover;
   background-repeat: no-repeat;
-
 }
+
 /* Css de addcategory */
 
   .addcategory{
     padding-top: 3%;
     padding-bottom: 7%;
     max-width: 600px;
-
-    /* margin-left: auto;
-    margin-right: 0; */
   }
   .addcategory form{
    position: relative;
@@ -385,6 +434,7 @@ display: none;
   }
   .addcategory h1{
     font-family: 'Lobster', sans-serif;
+    text-align: center;
   }
   .addcategory input {
     display: flex;
@@ -400,6 +450,7 @@ display: none;
   }
   .addcategory input[type="submit"] {
     background-color: rgb(104, 125, 222);
+    justify-content: center;
     border-radius: 5px;
     padding: 5px;
     font-size: 20px;
@@ -409,4 +460,13 @@ display: none;
     position: relative;
     left: 25%;
     top: 20px;
+  }
+
+  .addcategory form img{
+    width: 46px;
+    height: 41px;
+    position: relative;
+    left: 2%;
+    bottom: 0.4pc;
+}
   }
