--- a/public/css/index.css
+++ b/public/css/index.css
@@ -176,11 +176,15 @@ section article img.carrito{
 }
 .part-three h1{
   text-align: center;
-  padding-bottom: 50px;
+  padding-bottom: 35px;
+  padding-top: 50px;
   font-family: 'Bitter', sans-serif;
 }
 .section-products article{
   padding: 2%;
+}
+.section-products article h2{
+  font-family:'Bitter', sans-serif;
 }
 .section-products article h4{
   display: flex;
@@ -302,6 +306,11 @@ height: auto;
 display: none;
 }
 }
+
+
+
+
+
 /* Regalos Css */
   .gifts{
     margin: 0!important;
@@ -316,22 +325,43 @@ display: none;
 
   form.gift-search{
     position: relative;
-    right: -77%;
-    bottom: -20%;
+    right: -3%;
+    top: 104%;
+
   }
   section .products{
     color: rgb(166, 56, 171);
     font-weight: bold;
   }
   img.allgifts{
-    width: 57px;
-    height: 54px;
+    width: 66px;
+    height: 62px;
     position: relative;
-    left: 1%;
-    top: -1pc;
+    left: 2%;
+    bottom: 1pc;
+  }
+  .gifts input[type="submit"]{
+  background-color: rgb(104, 125, 222);
+  justify-content: center;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 20px;
+  font-family: 'Lobster', sans-serif;
+  height: 45px;
+  width: 244px;
+  }
+  .gifts input[type="text"]{
+    height: 45px;
+    width: 244px;
+    background-color: #f17288;
   }
 
-/* formularios css */
+
+
+
+
+
+/* FORMULARIOS DE ADDS */
 
 .addgift{
   width: 50%;
@@ -468,5 +498,4 @@ img.lista{
     position: relative;
     left: 2%;
     bottom: 0.4pc;
-}
   }
