carrito redirige bien

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -13,7 +13,7 @@
 
 }
 .fondo-register {
-background-image:url('../img/ingreso.jpg');
+background-image:url('../img/index/ingreso.jpg');
 width: 50%;
 height: 781px;
 background-repeat: no-repeat;
