--- a/public/css/register.css
+++ b/public/css/register.css
@@ -155,6 +155,39 @@ span.error-form {
   left: 20%;
 }
 
+
+/* PROFILE */
+
+.card-body.profile{
+  background-color:rgba(214, 197, 222, 0.6);
+}
+
+.profile_image{
+  display: flex;
+  justify-content: center;
+}
+
+.form-control.profile{
+  width: 67%;
+}
+
+h1.profile{
+  display: flex;
+  justify-content: center;
+  padding-left: 0;
+  padding-bottom: 3%;
+}
+
+.btn.btn-primary.profile{
+  position: relative;
+  left: 4%;
+}
+
+
+
+
+
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .calen-form-group {
