--- a/public/css/index.css
+++ b/public/css/index.css
@@ -309,18 +309,59 @@ display: none;
 
 
 /* PRODUCTOS DETALLE  */
-article.producDetail{
-
+.product{
+  display: flex;
+  justify-content: center;
 }
-section.product img{
+.card.producDetail{
+  background-color: rgba(200, 235, 243, 0.5);
+}
+
+.carritoImg{
+  display: flex;
+  justify-content: center;
+}
+.carritoImg img{
+  width: 70px;
+  position: relative;
+  left: -4%;
+  bottom: -48px;
+}
+h1.productDetail{
+font-family: 'Lobster', sans-serif;
+font-size: 40px;
+display: flex;
+justify-content: center;
+}
+.detail h3{
+  font-size: 35px;
+  font-family: 'Lobster', sans-serif;
+}
+.detail h4{
+  font-weight: bold;
+  color: rgb(177, 13, 156);
+  font-size: 22px;
+}
+.detail h5{
+text-align: center;
+font-size: 25px;
+font-style: italic;
+}
+
+
+img.detalle{
+  width: 61px;
+}
+.product img{
   max-width: 433px;
   max-height: 303px;
-  border-radius: 24%;
+  border-radius: 50%;
   float: left;
 }
-section.product{
-  float: right;
-  padding-right: 2%;
+article.detail{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .product h1{
   text-align: center;
@@ -362,6 +403,7 @@ section.product article h5{
 }
 .addcart button[type="submit"]{
   background-color: rgb(104, 125, 222);
+  color: black;
   justify-content: center;
   border-radius: 5px;
   padding: 2px;
@@ -369,18 +411,24 @@ section.product article h5{
   font-family: 'Lobster', sans-serif;
   height: 37px;
   width: 247px;
-  position: relative;
-  left: 18%;
-  bottom: -1pc;
 }
-.addcart .add{
-  position: relative;
-  left: 23%;
+.add{
+  display: flex;
+  justify-content: center;
+}
+.form-group.add{
+  display: flex;
+  justify-content: center;
 }
 
 .addcart input[type="number"]{
+  font-weight: bolder;
+  text-align: center;
   background-color: #f17288;
+  font-size: 15px;
+  border-radius: 5px;
 }
+
 .addcart.submit{
   position: absolute;
   left: 20%;
@@ -392,11 +440,8 @@ section article img.carrito{
   left: 33%;
   top: 18%;
 }
-.actionButtons{
-  position: relative;
-  left: 18%;
-  top: 2%;
-  /* display: none; */
+form.editgift {
+  padding-bottom: 7px;
 }
 form.editgift input[type="submit"]{
   background-color: rgb(32, 141, 178);
@@ -407,8 +452,7 @@ form.editgift input[type="submit"]{
   font-family: 'Lobster', sans-serif;
   height: 37px;
   width: 208px;
-  position: relative;
-  right: 6%;
+  padding-top: 5px;
 }
 form.delategift input[type="submit"]{
   background-color:rgb(226, 87, 76);
@@ -419,8 +463,6 @@ form.delategift input[type="submit"]{
   font-family: 'Lobster', sans-serif;
   height: 37px;
   width: 208px;
-  position: relative;
-  right: 6%;
 }
 
 /*CART CSS*/
@@ -485,7 +527,7 @@ table{
   form.gift-search{
     position: relative;
     right: -3%;
-    top: 104%;
+    top: 100%;
 
   }
   section .products{
@@ -521,20 +563,35 @@ table{
 
   /* Boton de Agregar Regalo */
   .buttonDeAddGift{
-    position: relative;
-    left: 5%;
-    bottom: -7pc;
+    display: flex;
+    justify-content:center;
+    padding-top: 30px;
     }
   .buttonDeAddGift input[type='submit']{
-    width: 25%;
-    height: 40px;
+    height: 44px;
+    width: 200px;
     justify-content: center;
     border-radius: 5px;
     padding: 5px;
     font-size: 20px;
     font-family: 'Lobster', sans-serif;
     background-color: rgb(210, 111, 175);
-}
+  }
+  .buttonDeAddCategory{
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+    }
+  .buttonDeAddCategory input[type='submit']{
+    width: 200px;
+    height: 44px;
+    justify-content: center;
+    border-radius: 5px;
+    padding: 5px;
+    font-size: 20px;
+    font-family: 'Lobster', sans-serif;
+    background-color: rgb(111, 210, 201);
+  }
 
 
 
