--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,6 +7,18 @@ body{
   padding: 0;
   height: auto;
  }
+ a.navbar-brand{
+   font-family:'Lobster', sans-serif;
+   padding-left: 3%;
+   font-size: 25px;
+ }
+
+ a.navbar-brand.complements{
+   font-family: 'Bitter', sans-serif;
+   padding-left: 3%;
+   font-size: 17px;
+ }
+
  .container.d-flex{
    padding-bottom: 5%;
  }
